// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Mentions default 1`] = `
<div
  class="arco-mentions arco-mentions-align-textarea"
>
  <textarea
    class="arco-textarea arco-mentions-textarea"
    rows="1"
  />
  <div
    class="arco-mentions-measure"
  >
    <span
      class="arco-mentions-measure-trigger"
    />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Mentions set className globally 1`] = `
<div
  class="arco-mentions arco-mentions-align-textarea global-default-class"
>
  <textarea
    class="arco-textarea arco-mentions-textarea"
    rows="1"
  />
  <div
    class="arco-mentions-measure"
  >
    <span
      class="arco-mentions-measure-trigger"
    />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Mentions set className globally and component set className itself. 1`] = `
<div
  class="arco-mentions arco-mentions-align-textarea component-class"
>
  <textarea
    class="arco-textarea arco-mentions-textarea"
    rows="1"
  />
  <div
    class="arco-mentions-measure"
  >
    <span
      class="arco-mentions-measure-trigger"
    />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Mentions set data-* property 1`] = `
<div
  class="arco-mentions arco-mentions-align-textarea"
>
  <textarea
    class="arco-textarea arco-mentions-textarea"
    data-test-name="Mentions"
    rows="1"
  />
  <div
    class="arco-mentions-measure"
  >
    <span
      class="arco-mentions-measure-trigger"
    />
  </div>
</div>
`;
